# database-inspector

./: .gitignore  README.md  pyproject.toml
src/database/: db_base.py  models.py  postgres_db_connection.py  sqlite_db_connection.py
src/database_inspector/db/: db_base.py  mssql_db_connection.py  mysql_db_connection.py  postgres_db_connection.py  sqlite_db_connection.py
src/database_inspector/infrastructure/: enums.py  errors.py  models.py  types.py
src/database_inspector/services/: ast_service.py  schema_service.py
src/services/: ast_service.py  schema_service.py
tests/: common.py  test_db_connection.py  test_postgres_db_connection.py  test_sqlite_db_connection.py
tests/sql/: mssql_test_table.sql  mysql_test_table.sql  postgres_test_table.sql  sqlite_test_table.sql
